--- a/sass/base/_buttons.sass
+++ b/sass/base/_buttons.sass
@@ -6,6 +6,7 @@ a.more-block
 	text-decoration: none
 	display: inline-block
 	padding: 10px 20px
+	margin: 0
 	transition: all 0.3s
 	-webkit-transition: all 0.3s
 	
