--- a/sass/layouts/_projects.sass
+++ b/sass/layouts/_projects.sass
@@ -22,90 +22,52 @@
 		h3
 			margin-bottom: 10px
 		.portfolio
-			margin: 0 auto
-			&.portfolio-1
-				background: url('/img/portfolio/baisden-portfolio.jpg') 0 0 no-repeat
-				background-size: 800px 471px
-				width: 800px
-				height: 471px
-				float: right
-			&.portfolio-2
-				background: url('/img/portfolio/baisden-property.jpg') 0 0 no-repeat
-				background-size: 800px 471px
-				width: 800px
-				height: 471px
-			&.portfolio-3
-				background: url('/img/portfolio/dlg-portal.jpg') 0 0 no-repeat
-				background-size: 800px 471px
-				width: 800px
-				height: 471px
-				float: right
-			&.portfolio-4
-				background: url('/img/portfolio/manchester-uni-opportunities.jpg') 0 0 no-repeat
-				background-size: 800px 471px
-				width: 800px
-				height: 471px
-		.descriptions
-			padding: 20px
+			height: 400px
+			overflow: hidden
+			figure
+				background-size: cover
+				width: 100%
+				height: 100%
+				margin: 0
+			.portfolio-1
+				background: url('/img/portfolio/baisden-portfolio.jpg') center center no-repeat
+			.portfolio-2
+				background: url('/img/portfolio/baisden-property.jpg') center center no-repeat
+			.portfolio-3
+				background: url('/img/portfolio/dlg-portal.jpg') center center no-repeat
+			.portfolio-4
+				background: url('/img/portfolio/manchester-uni-opportunities.jpg') center center no-repeat
+			.descriptions
+				padding: 20px 100px
+				text-align: center
+				color: #fff
+				font-size: 16px
+				position: absolute
+				top: 0
+				left: 0
+				width: 100%
+				height: 100%
+				background: rgba(0,0,0,0.8)
+				display: flex
+				flex-direction: column
+				justify-content: center
+				align-items: center
+				opacity: 0
+				transition: all 0.5s
+				h3
+					color: #fff
+					padding-top: 100px
+					transition: all 0.5s
+				&:hover
+					opacity: 1
+					h3
+						padding-top: 0px
+
+
 @media only screen and (max-width: 1068px)
 	#projects
 		.projects-grid
-			.portfolio
-				margin-bottom: 20px
-				margin-left: auto
-				margin-right: auto
-				&.portfolio-1
-					background: url('/img/portfolio/baisden-portfolio.jpg') 0 0 no-repeat
-					background-size: 600px 353px
-					width: 600px
-					height: 353px
-					margin-left: auto
-					float: none
-				&.portfolio-2
-					background: url('/img/portfolio/baisden-property.jpg') 0 0 no-repeat
-					background-size: 600px 353px
-					width: 600px
-					height: 353px
-					margin-left: auto
-				&.portfolio-3
-					background: url('/img/portfolio/dlg-portal.jpg') 0 0 no-repeat
-					background-size: 600px 353px
-					width: 600px
-					height: 353px
-					margin-left: auto
-					float: none
-				&.portfolio-4
-					background: url('/img/portfolio/manchester-uni-opportunities.jpg') 0 0 no-repeat
-					background-size: 600px 353px
-					width: 600px
-					height: 353px
-					margin-left: auto
+			.descriptions
+				padding: 20px
 
 @media only screen and (max-width: 767px)
-	#projects
-		.projects-grid
-			.portfolio
-				&.portfolio-1
-					background: url('/img/portfolio/baisden-portfolio.jpg') 0 0 no-repeat
-					background-size: 400px 236px
-					width: 400px
-					height: 236px
-					margin-left: auto
-				&.portfolio-2
-					background: url('/img/portfolio/baisden-property.jpg') 0 0 no-repeat
-					background-size: 400px 236px
-					width: 400px
-					height: 236px
-					margin-left: auto
-				&.portfolio-3
-					background: url('/img/portfolio/dlg-portal.jpg') 0 0 no-repeat
-					background-size: 400px 236px
-					width: 400px
-					height: 236px
-					margin-left: auto
-				&.portfolio-4
-					background: url('/img/portfolio/manchester-uni-opportunities.jpg') 0 0 no-repeat
-					background-size: 400px 236px
-					width: 400px
-					height: 236px
-					margin-left: auto
