--- a/sass/layouts/_projects.sass
+++ b/sass/layouts/_projects.sass
@@ -30,13 +30,13 @@
 				height: 100%
 				margin: 0
 			.portfolio-1
-				background: url('/img/portfolio/baisden-portfolio.jpg') center center no-repeat
+				background: url('/img/portfolio/baisden-portfolio.jpg') top center no-repeat
 			.portfolio-2
-				background: url('/img/portfolio/baisden-property.jpg') center center no-repeat
+				background: url('/img/portfolio/baisden-property.jpg') top center no-repeat
 			.portfolio-3
-				background: url('/img/portfolio/dlg-portal.jpg') center center no-repeat
+				background: url('/img/portfolio/dlg-portal.jpg') top center no-repeat
 			.portfolio-4
-				background: url('/img/portfolio/manchester-uni-opportunities.jpg') center center no-repeat
+				background: url('/img/portfolio/manchester-uni-opportunities.jpg') top center no-repeat
 			.descriptions
 				padding: 20px 100px
 				text-align: center
