--- a/sass/layouts/_home.sass
+++ b/sass/layouts/_home.sass
@@ -94,7 +94,7 @@
 				.item-three
 					background: url('/img/home/portfolio-3.jpg') center center no-repeat
 					background-size: cover
-				span
+				div
 					display: flex
 					flex-direction: column
 					justify-content: center
@@ -112,7 +112,7 @@
 						display: inline-block
 						margin: 0
 						border: 1px solid white
-				&:hover > span
+				&:hover > div
 					opacity: 0.8
 						
 		.more-block
